<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/item_background"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Date-->
        <LinearLayout
            android:id="@+id/task_date_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Created-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_task_date_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
            <!--Started-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/started"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_task_date_started"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="26.11.18"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
            <!--Last work-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_task_date_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="26.11.18"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!--Duration-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_task_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dash"
                    android:clickable="true"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!--Total-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_task_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dash"
                    android:text="$1250"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>


            <!--Id for test-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="id"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_task_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/anim_play"
            />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="My live" />

    <TextView
        android:id="@+id/tv_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Build house, make all people happy"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/colorPrimary"
        android:visibility="visible" />
    <!--android:textAppearance="@android:style/TextAppearance.Material.Large"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/task_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/square_photo" />

        <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_notifications_off_black_24dp" />

    </RelativeLayout>
</LinearLayout>

